--- a/dashboard.html
+++ b/dashboard.html
@@ -37,6 +37,12 @@
             </a>
           </li>
           <li>
+            <a href="./maps.html">
+              <i class="now-ui-icons location_map-big"></i>
+              <p>Maps</p>
+            </a>
+          </li>
+          <li>
             <a href="./datatables.html">
               <i class="now-ui-icons design_bullet-list-67"></i>
               <p>Sensor Data Table</p>
@@ -54,7 +60,8 @@
           </div>
           <!-- Subscribe to notification messages -->
           <span><button onclick="document.getElementById('popUp').style.display='block'" class="content">SUBSCRIBE TO NOTIFICATIONS</button>&nbsp;&nbsp;&nbsp;
-          <button onclick="signOut" style= "background-color:#f44336" class="content">SIGN OUT</button></span>
+          <!-- <button onclick="signOut" style= "background-color:#f44336" class="content">SIGN OUT</button>-->
+          </span> 
         </div>
       </nav>
       <!-- End Navbar -->
@@ -78,7 +85,7 @@
 
     <div class="panel-header panel-header-lg">
       <!--<p style="color: white">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Average Sensor Reading</p>-->
-      <canvas id="AverageReadingsChart"></canvas>    <!--PUT REAL DATA HERE-->
+      <canvas id="AverageReadingsChart"></canvas>    <!--THE DATA CHART-->
     </div>
     <div class="content">
       <div class="row">
@@ -89,7 +96,7 @@
             </div>
             <div class="card-body">
               <div class="chart-area">
-                <canvas id="PMConcentrationChart"></canvas>   <!--PUT REAL DATA HERE-->
+                <canvas id="PMConcentrationChart"></canvas>   <!--THE DATA CHART-->
               </div>
             </div>
             <div class="card-footer ">
@@ -107,7 +114,7 @@
             </div>
             <div class="card-body">
               <div class="chart-area">
-                <canvas id="COConcentrationChart"></canvas>   <!--PUT REAL DATA HERE-->
+                <canvas id="COConcentrationChart"></canvas>   <!--THE DATA CHART-->
               </div>
             </div>
             <div class="card-footer ">
@@ -127,7 +134,7 @@
             </div>
             <div class="card-body">
               <div class="chart-area">
-                <canvas id="CO2ConcentrationChart"></canvas> <!--PUT REAL DATA HERE-->
+                <canvas id="CO2ConcentrationChart"></canvas> <!--THE DATA CHART-->
               </div>
             </div>
             <div class="card-footer ">
@@ -138,16 +145,12 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <div class="card  card-chart">
             <div class="card-header ">
-              <h4 class="card-title">Average composition chart</h4>
+              <h4 class="card-title">Average AQI</h4>
             </div>
-            <div class="card-body ">
-              <div class="chart-area">
-                <canvas id="pieChart"></canvas> <!--PUT REAL DATA HERE-->
-              </div>
-            </div>
+            <div class="circle"></div>
             <div class="card-footer ">
               <hr>
               <div class="stats">
@@ -155,15 +158,15 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-      <!-- </div> -->
+      </div>
       <footer class="footer">
         <div class="container-fluid">
           <nav>
             <ul>
               <li>
-                <a href="index.html">  <!--Put links here if you like-->
+                <a href="index.html">  
                   AIR QUALITY KENYA
                 </a>
               </li>
@@ -187,15 +190,11 @@
   <script src="js/plugins/perfect-scrollbar.jquery.min.js"></script>
   <!-- Chart JS -->
   <script src="js/plugins/chartjs.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="js/now-ui-dashboard.min.js?v=1.3.0" type="text/javascript"></script>
-  <!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <!-- <script src="demo/demo.js"></script> -->
   <script>
       // Get the modal
-      var modal = document.getElementById('id01');
+      var modal = document.getElementById('popUp');
     
       // When the user clicks anywhere outside of the modal, close it
       window.onclick = function(event) {
@@ -206,7 +205,7 @@
       </script>
   <script>
     $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
+      // Javascript method's body can be found in js/app.js
       getData(true);
     });
   </script>
