--- a/maps.html
+++ b/maps.html
@@ -42,12 +42,6 @@
           </a>
         </li>
         <li>
-          <a href="./notification.html">
-            <i class="now-ui-icons ui-1_bell-53"></i>
-            <p>Notifications</p>
-          </a>
-        </li>
-        <li>
           <a href="./datatables.html">
             <i class="now-ui-icons design_bullet-list-67"></i>
             <p>Sensor Data Table</p>
@@ -85,7 +79,7 @@
         <nav>
           <ul>
             <li>
-              <a href="index.html">  <!--Put links here if you like-->
+              <a href="index.html">  
                 AIR QUALITY KENYA
               </a>
             </li>
@@ -111,12 +105,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADJPt54Z2kN179wAL2mdh-qsxy-SY2fZ4"></script>
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="js/now-ui-dashboard.min.js?v=1.3.0" type="text/javascript"></script>
-  <!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="demo/demo.js"></script>
   <script>
     $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
-      demo.initGoogleMaps();
+      // Javascript method's body can be found in js/app.js
+      chart.initGoogleMaps();
       setmap();
     });
   </script>
